# plugger

./: README.md  main.py  pyproject.toml  requirements.txt  test_example.py
.github/workflows/: main.yaml
core/: base.py  engines.py
examples/algorithms/: foo_bar.py
examples/algorithms/baz/: qux_xyz.py
github/workflows/: main.yaml
plugger/: main.py
plugger/core/: base.py  engines.py
plugger/examples/algorithms/: foo_bar.py
plugger/examples/algorithms/baz/: qux_xyz.py
tests/: test_example.py
tests/examples/tests/: foo_bar.json
tests/examples/tests/baz/: qux_xyz.json
