[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "plugger"
version = "0.1.0"
description = "Modular runtime injector and test launcher"
authors = ["RMN <no-reply@mail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "plugger" }]

[tool.poe.tasks]
ruff-check = "poetry run ruff --config pyproject.toml check ./"
black-check = "poetry run black --check --config pyproject.toml ./"
mypy-check = "poetry run mypy --config-file pyproject.toml ./"
ruff-format = "poetry run ruff --config pyproject.toml format ./"
black-format = "poetry run black --config pyproject.toml ./"
check = ["ruff-check", "black-check"]
hard-check = ["check", "mypy-check"]
format = ["ruff-format", "black-format"]
test = "poetry run pytest -c pyproject.toml --cov-report=html tests/"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-env = "^1.1.5"
pytest-html = "^4.1.1"
pytest-cov = "^4.1.0"
ruff = "^0.11.5"
black = "^25.1.0"
poethepoet = "^0.33.1"
mypy = "^1.15.0"

[tool.black]
target-version = ["py312"]
color = true
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.github
    | \.idea
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | build
    | venv
)/
'''

[tool.ruff]
target-version = "py312"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "ANN", # flake8-annotations
]
lint.ignore = [
    "E501", # line too long, handled by black
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN204", # Missing type annotation for special methods
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `*args/**kwargs`
]
exclude = [
    ".git",
    ".github",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = 3.12
color_output = true

[tool.pytest.ini_options]
env = [
    "SOME_TEST_VALIRABLE=test",
]
norecursedirs = [
    ".git",
    ".github",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "venv"
]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--doctest-continue-on-failure"
]
